--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/style.css
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   color: rgb(93, 96, 99);
   line-height: 1.3;
   font-size: 16px;
@@ -14,25 +14,24 @@ form {
   text-align: center;
   margin-bottom: 15px;
   font-weight: 700;
-}
+} */
 
 .form-header {
-  text-align: center;
   background-color: rgb(246, 247, 248);
   border: 1px solid rgb(214, 217, 220);
   border-radius: 3px;
   margin: 40px 50px;
-  padding: 50px;
+  padding: 20px;
 }
-
+/* /* 
 fieldset {
   margin: 0 0 15px;
-}
+} */
 
 .line-content {
   margin: 12px;
 }
-
+/* 
 .button {
   width: 200px;
   text-align: center;
@@ -42,4 +41,4 @@ fieldset {
   padding: 15px;
   border: 1px solid black;
   margin-bottom: 15px;
-}
+} */ */
